swayosd: use sway instead of dunstify

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -18,7 +18,7 @@ $menu = pkill wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & dunst &
+exec-once = waybar & hyprpaper & dunst & swayosd-server -s ~/.config/swayosd/style.css &
 exec-once = ~/.config/hypr/restore-wallpaper.sh
 
 
@@ -193,11 +193,10 @@ bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
 bind = SUPER+ALT, SPACE, exec, ~/.config/hypr/cycle-wallpaper.sh
 
 # Media Keys
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0 && ~/.config/hypr/volume-notify.sh
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/volume-notify.sh
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
 # Add custom keybinding for next song with Ctrl + Alt + Right Arrow
 bind = MOD+CTRL+ALT, RIGHT, exec, playerctl next
 bind = MOD+CTRL+ALT, LEFT, exec, playerctl previous
