--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -47,7 +47,7 @@ bind = ALT, L, exec, ~/.config/hypr/lock.sh
 bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 
 # Laptop multimedia keys for LCD brightness
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.config/hypr/brightness-notify.sh
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.config/hypr/brightness-notify.sh
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
 exec-once = hypridle
