hyprlock: put to common

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -331,3 +331,6 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # 
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
 exec-once = wlsunset -l 51.51 -L 7.5 -t 6000
+
+# hyprlock
+bind = WIN, L, exec, ~/.config/hypr/lock.sh
