--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -12,6 +12,7 @@ keybind = ctrl+enter=unbind
 
 confirm-close-surface = false
 mouse-hide-while-typing = true
+mouse-scroll-multiplier = 0.3
 
 ## Color Scheme: Gooey (Converted to Ghosty Syntax)
 #
