hypr: replace flameshot

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -184,10 +184,10 @@ input {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 # $mainMod = Windows # Sets "Windows" key as main modifier
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = ALT
 
-# Screenshot a region
-bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
+# Screenshot a region and copy to clipboard via grim/slurp
+bind = ALT + SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
 # Cycle through wallpapers
 bind = SUPER+ALT, SPACE, exec, ~/.config/hypr/cycle-wallpaper.sh
