--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -36,7 +36,7 @@ label {
 
 label {
     monitor =
-    text = cmd[update:5000] echo " $(cat /sys/class/power_supply/BAT*/capacity)%"
+    text = cmd[update:5000] ~/.config/hypr/battery-status.sh
     color = rgba(255, 255, 255, 1.0)
     font_size = 14
     font_family = JetBrainsMono Nerd Font
@@ -57,6 +57,7 @@ input-field {
     font_color = rgba(255, 255, 255, 1.0)
     fade_on_empty = false
     placeholder_text = <span foreground="##ffffff"></span>
+    fail_text = Wrong password
     hide_input = false
     position = 0, -120
     halign = center
