--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -187,7 +187,7 @@ input {
 $mainMod = ALT
 
 # Screenshot a region and copy to clipboard via grim/slurp
-bind = ALT + SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = ALT + SHIFT, S, exec, grim -g "$(slurp -b 00000080)" - | wl-copy
 
 # Cycle through wallpapers
 bind = SUPER+ALT, SPACE, exec, ~/.config/hypr/cycle-wallpaper.sh
