--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -44,7 +44,15 @@ device {
 bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 
 # Laptop multimedia keys for LCD brightness
-bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
-bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+bindel = ,XF86MonBrightnessUp, exec, ~/.local/bin/swayosd-client --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, ~/.local/bin/swayosd-client --brightness lower
+
+# Override audio keys to use custom swayosd (with rotation fix)
+bindel = ,XF86AudioRaiseVolume, exec, ~/.local/bin/swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, ~/.local/bin/swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, ~/.local/bin/swayosd-client --output-volume mute-toggle
+
+# Use custom swayosd-server with rotation fix
+exec-once = ~/.local/bin/swayosd-server -s ~/.config/swayosd/style.css &
 
 exec-once = hypridle
