hypr: add wallpaper script

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -18,7 +18,7 @@ $menu = pkill wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & dunst & swayosd-server -s ~/.config/swayosd/style.css &
+exec-once = waybar & hyprpaper & dunst &
 exec-once = ~/.config/hypr/restore-wallpaper.sh
 
 
@@ -192,9 +192,9 @@ bind = ALT + SHIFT, S, exec, grim -g "$(slurp -b 00000080)" - | wl-copy
 # Cycle through wallpapers
 bind = SUPER+ALT, SPACE, exec, ~/.config/hypr/cycle-wallpaper.sh
 
-# Media Keys
-bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+# Media Keys (auto-unmute on volume change)
+bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/volume-raise.sh
+bindel = ,XF86AudioLowerVolume, exec, ~/.config/hypr/volume-lower.sh
 bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 # Add custom keybinding for next song with Ctrl + Alt + Right Arrow
