--- a/hypr/.config/hypr/hosts/desktop.conf
+++ b/hypr/.config/hypr/hosts/desktop.conf
@@ -21,4 +21,7 @@ device {
     sensitivity = -0.5
 }
 
+# Use system swayosd
+exec-once = swayosd-server -s ~/.config/swayosd/style.css &
+
 exec-once = hypridle
