hypr: mirror external monitor

--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -4,12 +4,12 @@
 ### MONITORS ###
 ################
 
-monitor = HDMI-A-1, 3840x2160@60, 0x-1080, 2
-monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0
-
+monitor = HDMI-A-1, 3840x2160@60, 0x0, 2
+monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0, mirror,HDMI-A-1
 
 # Startup
 exec-once = [workspace 5 silent] chromium --restore-last-session
+exec-once = ~/.config/hypr/force-normal-orientation.sh
 windowrulev2 = workspace 5 silent, class:^(chromium)$
 
 #############
@@ -34,6 +34,11 @@ input {
 device {
     name = elan900c:00-04f3:2830
     transform = 0
+}
+
+device {
+    name = logitech-usb-optical-mouse
+    sensitivity = -0.8
 }
 
 ###################
