hypr: add gitignore entries

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ systemd/.config/systemd/user/pipewire.service.wants/
 nvim/.config/lazy-lock.json
 nvim/.config/nvim/lazy-lock.json
 hypr/.config/hypr/host.conf
+hypr/.config/hypr/current_wallpaper
+hypr/.config/hypr/current_wallpaper_index
 waybar/.config/waybar/config.jsonc
 bin/.local/bin/swayosd*
