--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -154,9 +154,13 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
     middle_click_paste = false # disable middle mouse paste
+}
+
+debug {
+    overlay = false
 }
 
 ecosystem {
@@ -306,10 +310,12 @@ misc{
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 # exec-once = [workspace 3 silent] godot --rendering-driver opengl3
-exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
+# exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
 exec-once = [workspace 6 silent] ebook-viewer ~/Documents/cka.epub
 # exec-once = [workspace 9 silent] discord
-exec-once = [workspace 10 silent] steam
+# exec-once = [workspace 10 silent] steam
+exec-once = flatpak run com.spotify.Client &
+exec-once = steam &
 
 
 ######################
