hypr: fix 0.53.0 breaking changes for windowrule

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -136,10 +136,10 @@ animations {
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+# windowrule = bordersize 0, match:floating 0, match:onworkspace w[tv1]
+# windowrule = rounding 0, match:floating 0, match:onworkspace w[tv1]
+# windowrule = bordersize 0, match:floating 0, match:onworkspace f[1]
+# windowrule = rounding 0, match:floating 0, match:onworkspace f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -156,6 +156,7 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    disable_splash_rendering = true # Disable quotes on empty workspaces
     middle_click_paste = false # disable middle mouse paste
 }
 
@@ -282,7 +283,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float, ^(kitty)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrule = float, match:class ^(kitty)$, match:title ^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
@@ -312,7 +313,7 @@ exec-once = [workspace 2 silent] ghostty
 # exec-once = [workspace 3 silent] godot --rendering-driver opengl3
 # exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
 exec-once = [workspace 6 silent] ebook-viewer ~/Documents/cka.epub
-# exec-once = [workspace 9 silent] discord
+# exec-once = [workspace 9 silent] flatpak run com.discordapp.Discord
 # exec-once = [workspace 10 silent] steam
 exec-once = flatpak run com.spotify.Client &
 exec-once = steam &
@@ -322,12 +323,13 @@ exec-once = steam &
 #### Window Rules ####
 ######################
 
-windowrulev2 = workspace 1 silent, class:^(firefox)$
-# windowrulev2 = workspace 3 silent, class:^(godot)$
-windowrulev2 = workspace 4 silent, class:^(Spotify)$
-windowrulev2 = workspace 6 silent, class:^(calibre-ebook-viewer)$
-windowrulev2 = workspace 9 silent, class:^(discord)$
-windowrulev2 = workspace 10 silent, class:^(steam)$
+windowrule = workspace 1 silent, match:class ^(firefox)$
+windowrule = workspace 2 silent, match:class ^(com.mitchellh.ghostty)$
+# windowrule = workspace 3 silent, match:class ^(godot)$
+windowrule = workspace 4 silent, match:class ^(Spotify)$
+windowrule = workspace 6 silent, match:class ^(calibre-ebook-viewer)$
+windowrule = workspace 9 silent, match:class ^(discord)$
+windowrule = workspace 10 silent, match:class ^(steam)$
 
 ######################
 ### KDE Dark Theme ###
