--- a/hypr/.config/hypr/hosts/desktop.conf
+++ b/hypr/.config/hypr/hosts/desktop.conf
@@ -1,7 +1,7 @@
 # Desktop-specific configuration
 
 # Monitor configuration
-monitor = , highres, auto, 2
+monitor = DP-2, highres, auto, 2
 
 input {
     kb_layout = de
