--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -10,7 +10,7 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0, mirror,HDMI-A-1
 # Startup
 exec-once = [workspace 5 silent] chromium --restore-last-session
 exec-once = ~/.config/hypr/force-normal-orientation.sh
-windowrulev2 = workspace 5 silent, class:^(chromium)$
+windowrule = workspace 5 silent, match:class ^(chromium)$
 
 #############
 ### INPUT ###
