--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -311,12 +311,10 @@ misc{
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 # exec-once = [workspace 3 silent] godot --rendering-driver opengl3
-# exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
-exec-once = [workspace 6 silent] ebook-viewer ~/Documents/cka.epub
+exec-once = [workspace 4 silent] flatpak run com.spotify.Client
+# exec-once = [workspace 6 silent] ebook-viewer ~/Documents/cka.epub
 # exec-once = [workspace 9 silent] flatpak run com.discordapp.Discord
-# exec-once = [workspace 10 silent] steam
-exec-once = flatpak run com.spotify.Client &
-exec-once = steam &
+exec-once = [workspace 10 silent] steam
 
 
 ######################
