hypr: fixing source error

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # Load common configuration
-source = ~/.config/hypr/hosts/common.conf
+source = hosts/common.conf
 
 # Load host-specific configuration
 # This file is a symlink created by install.sh based on hostname
